--- a/ReddMaten/css/stilark_hjemmeside.css
+++ b/ReddMaten/css/stilark_hjemmeside.css
@@ -67,3 +67,33 @@ p{
   text-align: center;
   margin-top: 0px;
 }
+h3{
+  margin: 0, 0, 10px;
+  padding: 0;
+  color: white;
+  font-size: 25px;
+  font-family: "Roboto", sans-serif;
+}
+.box{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 500px;
+}
+input{
+  position: relative;
+  display: inline-block;
+  font-size: 20px;
+  box-sizing: border-box;
+  transition: .5s;
+}
+input> .sokefelt{
+  background: white;
+  width: 340px;
+  height: 50px;
+  border: none;
+  outline: none;
+  padding: 0, 25px;
+  border-radius: 25px;
+}
